# diploma_project

./: .gitignore  README.md  alembic.ini  gh_actions_key  gh_actions_key.pub  postman_collection.json  requirements.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: cli.py  main.py  routers.py  settings.py
backend/app/core/: errors.py  i18n.py  logging.py  security.py
backend/migrations/versions/: 0001_init.py  0002_problem_images_and_canonical.py  014109580078_add_grade_level_to_lessons.py  12c3462baf21_merge_knowledge_and_other_migrations.py  161990f656a1_lessons.py  6297b8f0210d_init_projects.py  8da4973a9470_add_lessons_submissions_user_profiles_.py  9cc6b283e89c_merge_auth_and_catalog_heads.py  a1b2c3d4e5f6_add_onboarding_goal_subjects.py  a4b5c6d7e8f9_add_content_blocks_remove_difficulty.py  a9b8c7d6e5f4_add_user_friend_requests.py  abcd1234ef01_add_video_jobs_table.py  ac7769b176f5_add_catalog_and_problems.py  b1d2e3f4a5b6_add_llm_token_usage_table.py  b2c3d4e5f607_add_schools_table.py  b7c6d5e4f3a2_add_avatar_url_to_user_profiles.py  c3d4e5f60718_add_school_id_to_user_profiles.py  c4d5e6f70819_add_classes_tables.py  c8d7e6f5a4b3_add_canonical_answer_column_safe.py  d1e2f3a4b5c6_add_lesson_progress.py  d9e8f7a6b5c4_ensure_problem_images_table.py  e1f2a3b4c5d6_ensure_activity_and_grading_trace.py  e2f3a4b5c6d7_add_subject_description.py  (+8 more)
backend/tests/: test_canonicalize.py  test_dashboard_service.py  test_deterministic_check.py  test_e2e_problem_flow.py
(+220 files in other folders)
