[project]
name = "Physics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0.25",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-json-logger>=2.0.7",
  "psycopg[binary]>=3.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
